# zeroclaw

./: Cargo.toml
crates/zeroclaw-channels/: Cargo.toml
crates/zeroclaw-misc/src/channels/: matrix.rs  mod.rs
crates/zeroclaw-misc/src/hardware/: mod.rs  uf2.rs
crates/zeroclaw-misc/src/peripherals/: mod.rs
crates/zeroclaw-misc/src/security/: landlock.rs  webauthn.rs
crates/zeroclaw-misc/src/tools/: mod.rs
tests/component/: otel_dependency_feature_regression.rs
