[workspace]
members = [".", "crates/zeroclaw-api", "crates/zeroclaw-infra", "crates/zeroclaw-config", "crates/zeroclaw-providers", "crates/zeroclaw-memory", "crates/zeroclaw-channels", "crates/zeroclaw-tools", "crates/zeroclaw-misc", "crates/zeroclaw-tool-call-parser", "crates/robot-kit", "crates/aardvark-sys", "crates/zeroclaw-macros", "apps/tauri"]
resolver = "2"

[package]
name = "zeroclawlabs"
version = "0.6.9"
edition = "2024"
authors = ["theonlyhennygod"]
license = "MIT OR Apache-2.0"
description = "Zero overhead. Zero compromise. 100% Rust. The fastest, smallest AI assistant."
repository = "https://github.com/zeroclaw-labs/zeroclaw"
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot"]
categories = ["command-line-utilities", "api-bindings"]
rust-version = "1.87"
include = [
  "/src/**/*",
  "/build.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/LICENSE*",
  "/README.md",
  "/web/dist/**/*",
  "/tool_descriptions/**/*",
]

[[bin]]
name = "zeroclaw"
path = "src/main.rs"

[lib]
name = "zeroclaw"
path = "src/lib.rs"

[dependencies]
# Internal workspace crates
zeroclaw-api = { path = "crates/zeroclaw-api" }
zeroclaw-infra = { path = "crates/zeroclaw-infra" }
zeroclaw-config = { path = "crates/zeroclaw-config", default-features = false }
zeroclaw-providers = { path = "crates/zeroclaw-providers" }
zeroclaw-memory = { path = "crates/zeroclaw-memory" }
zeroclaw-channels = { path = "crates/zeroclaw-channels", default-features = false, optional = true }
zeroclaw-tools = { path = "crates/zeroclaw-tools", optional = true }
zeroclaw-misc = { path = "crates/zeroclaw-misc", default-features = false, optional = true }
zeroclaw-tool-call-parser = { path = "crates/zeroclaw-tool-call-parser" }
# Internal proc macros
zeroclaw-macros = { path = "crates/zeroclaw-macros", version = "0.1.0" }
# CLI - minimal and fast
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async runtime - feature-optimized for size
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }

# HTTP client - minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream", "socks"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Config
directories = "6.0"
toml = "1.0"
shellexpand = "3.1"

# JSON Schema generation for config export
schemars = "1.2"

# Logging - minimal
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

# Base64 encoding (screenshots, image data)
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# URL encoding for web search
urlencoding = "2.1"

# HTML to plain text conversion (web_fetch tool)
nanohtml2text = "0.2"

rumqttc = "0.24"

# Tarball extraction for binary updates
flate2 = "1"
tar = "0.4"

# Progress bars (update pipeline)
indicatif = "0.18"

# Temp files (update pipeline rollback)
tempfile = "3.26"

# Zip extraction for ClawhHub / OpenClaw registry installers
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Aardvark I2C/SPI/GPIO USB adapter (Total Phase) — stub when SDK absent
aardvark-sys = { path = "crates/aardvark-sys", version = "0.1.0" }

# UUID generation
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# CSPRNG for secure token generation
rand = "0.10"

# Portable atomic fallbacks for targets without native 64-bit atomics
portable-atomic = "1"

# Fast mutexes that don't poison on panic
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# HMAC-SHA256 (Zhipu/GLM JWT auth)
ring = "0.17"

# LRU cache for bounded sender state
lru = "0.16"

# Memory / persistence
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"
cron = "0.15"

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"

# TUI onboarding (ratatui + crossterm)
ratatui = { version = "0.30", default-features = true }
crossterm = { version = "0.29", features = ["event-stream"] }

# Hardware discovery (device path globbing)
glob = "0.3"

# Binary discovery (init system detection)
which = "8.0"

# WebSocket client channels (Discord/Lark/DingTalk/Nostr)
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio-socks = "0.5"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
regex = "1.10"
hostname = "0.4.2"
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1.14.0"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"

# email
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mail-parser = "0.11.2"
async-imap = { version = "0.11",features = ["runtime-tokio"], default-features = false }

# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"] }
http-body-util = "0.1"

# Embed frontend assets into binary (web dashboard)
rust-embed = "8"
mime_guess = "2"

# Use the blocking HTTP exporter client to avoid Tokio-reactor panics in
# non-Tokio contexts.

# (Linux, macOS, Windows). Android/Termux uses target_os="android" and is excluded.

# Uses wa-rs for Bot and Client, wa-rs-core for storage traits, custom rusqlite backend avoids Diesel conflict.

# Unix-specific dependencies (for root check, etc.)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = [
    "agent-runtime",
    "observability-prometheus",
    "schema-export",
]

# The full agent runtime — agent loop, channels, tools, gateway, TUI, all subsystems.
# Without this, you get the kernel: config + providers + memory + CLI chat.
agent-runtime = [
    "dep:zeroclaw-misc", "dep:zeroclaw-channels", "dep:zeroclaw-tools",
    "gateway", "tui-onboarding",
    "channel-email", "channel-telegram", "channel-lark",
    "channel-discord", "channel-slack", "channel-signal",
    "channel-mattermost", "channel-irc", "channel-imessage",
    "channel-dingtalk", "channel-qq", "channel-bluesky",
    "channel-twitter", "channel-reddit", "channel-notion",
    "channel-linq", "channel-wati", "channel-nextcloud",
    "channel-mochat", "channel-wecom", "channel-clawdtalk",
    "channel-webhook", "channel-acp-server", "channel-whatsapp-cloud",
    "channel-voice-call",
]

# Major subsystems — each forwards to exactly ONE crate
gateway = ["zeroclaw-misc/gateway"]
tui-onboarding = ["zeroclaw-misc/tui-onboarding"]
schema-export = ["zeroclaw-config/schema-export"]

# Channels — each forwards to zeroclaw-misc (which forwards to zeroclaw-channels)
channel-email = ["zeroclaw-misc/channel-email"]
channel-telegram = ["zeroclaw-misc/channel-telegram"]
channel-lark = ["zeroclaw-misc/channel-lark"]
channel-nostr = ["zeroclaw-misc/channel-nostr"]
channel-matrix = ["zeroclaw-misc/channel-matrix"]
channel-discord = ["zeroclaw-misc/channel-discord"]
channel-slack = ["zeroclaw-misc/channel-slack"]
channel-signal = ["zeroclaw-misc/channel-signal"]
channel-mattermost = ["zeroclaw-misc/channel-mattermost"]
channel-irc = ["zeroclaw-misc/channel-irc"]
channel-imessage = ["zeroclaw-misc/channel-imessage"]
channel-dingtalk = ["zeroclaw-misc/channel-dingtalk"]
channel-qq = ["zeroclaw-misc/channel-qq"]
channel-bluesky = ["zeroclaw-misc/channel-bluesky"]
channel-twitter = ["zeroclaw-misc/channel-twitter"]
channel-reddit = ["zeroclaw-misc/channel-reddit"]
channel-notion = ["zeroclaw-misc/channel-notion"]
channel-linq = ["zeroclaw-misc/channel-linq"]
channel-wati = ["zeroclaw-misc/channel-wati"]
channel-nextcloud = ["zeroclaw-misc/channel-nextcloud"]
channel-mochat = ["zeroclaw-misc/channel-mochat"]
channel-wecom = ["zeroclaw-misc/channel-wecom"]
channel-clawdtalk = ["zeroclaw-misc/channel-clawdtalk"]
channel-webhook = ["zeroclaw-misc/channel-webhook"]
channel-acp-server = ["zeroclaw-misc/channel-acp-server"]
channel-whatsapp-cloud = ["zeroclaw-misc/channel-whatsapp-cloud"]
channel-voice-call = ["zeroclaw-misc/channel-voice-call"]
channel-feishu = ["channel-lark"]
whatsapp-web = ["zeroclaw-misc/whatsapp-web"]
voice-wake = ["zeroclaw-misc/voice-wake"]

# Backends and platform flags — each forwards to ONE crate
observability-prometheus = ["zeroclaw-misc/observability-prometheus"]
observability-otel = ["zeroclaw-misc/observability-otel"]
hardware = ["zeroclaw-misc/hardware"]
peripheral-rpi = ["zeroclaw-misc/peripheral-rpi"]
sandbox-landlock = ["zeroclaw-misc/sandbox-landlock"]
sandbox-bubblewrap = ["zeroclaw-misc/sandbox-bubblewrap"]
browser-native = ["zeroclaw-tools/browser-native"]
plugins-wasm = ["zeroclaw-misc/plugins-wasm"]
probe = ["zeroclaw-misc/probe"]
rag-pdf = ["zeroclaw-tools/rag-pdf"]
skill-creation = ["zeroclaw-misc/skill-creation"]
webauthn = ["zeroclaw-misc/webauthn"]

# Backward-compatible aliases
fantoccini = ["browser-native"]
landlock = ["sandbox-landlock"]
metrics = ["observability-prometheus"]

# CI meta-feature
ci-all = [
    "agent-runtime",
    "channel-nostr", "channel-matrix", "whatsapp-web",
    "observability-prometheus", "observability-otel",
    "hardware", "peripheral-rpi",
    "sandbox-landlock", "sandbox-bubblewrap",
    "browser-native", "plugins-wasm", "probe", "rag-pdf",
    "skill-creation", "webauthn",
]

[profile.dev]
incremental = true
opt-level = 0

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Maximum cross-crate optimization for smaller binaries
codegen-units = 1    # Serialized codegen for low-memory devices (e.g., Raspberry Pi 3 with 1GB RAM)
                     # Higher values (e.g., 8) compile faster but require more RAM during compilation
strip = true          # Remove debug symbols
panic = "abort"      # Reduce binary size

[profile.release-fast]
inherits = "release"
codegen-units = 8    # Parallel codegen for faster builds on powerful machines (16GB+ RAM recommended)
                     # Use: cargo build --profile release-fast

[profile.ci]
inherits = "release"
lto = "thin"         # Much faster than fat LTO; still catches release-mode issues
codegen-units = 16   # Full parallelism for CI runners

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3.26"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
scopeguard = "1.2"
rcgen = "0.13"

[[test]]
name = "component"
path = "tests/test_component.rs"

[[test]]
name = "integration"
path = "tests/test_integration.rs"

[[test]]
name = "system"
path = "tests/test_system.rs"

[[test]]
name = "live"
path = "tests/test_live.rs"

[[bench]]
name = "agent_benchmarks"
harness = false
